What's Hot, Ticket Open 추가 , inner width 길이 변경

--- a/index.html
+++ b/index.html
@@ -154,16 +154,42 @@
           <h2>What's Hot</h2>
           <div class="hotCon">
             <div class="best1">
-              <a href="#"></a>
+              <a href="#">
+                <img src="img/hot1.jpg" alt="hot1">
+              </a>
             </div>
 
             <ul>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
+              <li>
+                <a href="#">
+                  <img src="img/hot2.jpg" alt="hot2">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/hot3.jpg" alt="hot3">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/hot4.jpg" alt="hot4">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/hot5.jpg" alt="hot5">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/hot6.jpg" alt="hot6">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/hot7.jpg" alt="hot7">
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -176,11 +202,51 @@
           <h2>Ticket Open</h2>
           <div class="newCon">
             <ul>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
+              <li>
+                <a href="#">
+                  <img src="img/new1.jpg" alt="new1">
+                  <div class="text">
+                    <h3>MY AUNT MARY 단독공연 [Right Now]</h3>
+                    <p>2023.05.17(수) 오후 2:00</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/new2.jpg" alt="new2">
+                  <div class="text">
+                    <h3>뮤지컬 배우 정동화 20주년 단독 콘서트</h3>
+                    <p>2023.05.19(금) 오후 2:00</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/new3.jpg" alt="new3">
+                  <div class="text">
+                    <h3>뮤지컬 〈오페라의 유령〉 - 서울</h3>
+                    <p> 2023.05.18(목) 오후 2:00</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/new4.jpg" alt="new4">
+                  <div class="text">
+                    <h3>뮤지컬 〈보이A〉</h3>
+                    <p>2023.05.17(수) 오후 3:00</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/new5.jpg" alt="new5">
+                  <div class="text">
+                    <h3>제16회 부산항축제 - 도넛보트</h3>
+                    <p>공연 날짜 공연 장소</p>
+                  </div>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -196,53 +262,75 @@
         </div>
       </section>
 
-
+      
       <section class="rank">
         <div class="inner">
           <h2>Ranking</h2>
-          <div class="rankNav">
-            <ul>
-              <li><a href="#">콘서트</a></li>
+            <ul class="rankNav">
               <li><a href="#">뮤지컬</a></li>
+              <li><a href="#" class="rank_concert">콘서트</a></li>
               <li><a href="#">연극</a></li>
               <li><a href="#">클래식</a></li>
               <li><a href="#">전시</a></li>
-              <li><a href="#">아동</a></li>
             </ul>
-          </div>
           <div class="rankCon">
-            <ul>  <!-- 틀만 놔두고 나중에 내용 변경되도록-->
-              <li>
-                <a href="#">
-                  <div class="rankConImg"></div>
-                  <div class="text">
-                    <h3>공연제목 공연제목 공연제목 공연제목</h3>
-                    <p>공연 날짜 공연 장소 공연 날짜 공연 장소</p>
-                  </div>
-                  <div class="rankNum">1위</div>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <div class="rankConImg"></div>
-                  <div class="text">
-                    <h3>공연제목 공연제목 공연제목 공연제목</h3>
-                    <p>공연 날짜 공연 장소 공연 날짜 공연 장소</p>
-                  </div>
-                  <div class="rankNum">2위</div>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <div class="rankConImg"></div>
-                  <div class="text">
-                    <h3>공연제목 공연제목 공연제목 공연제목</h3>
-                    <p>공연 날짜 공연 장소 공연 날짜 공연 장소</p>
-                  </div>
-                  <div class="rankNum">3위</div>
-                </a>
-              </li>
-            </ul>
+            <div class="rankAll"><!-- 틀만 놔두고 나중에 내용 변경되도록-->
+              <ul class="rankCon_musical"></ul>
+              <ul class="rankCon_concert">  
+                <li class="rankLi">
+                  <a href="#">
+                    <div class="rankConImg">
+                      <!-- 블러 배경 -->
+                        <div class="rankConImg1"></div>
+                      <!-- 블러 배경 -->
+                      <!-- 선명한 배경 -->
+                      <img src="img/rank1.jpg" alt="rank1">
+                      <!-- 선명한 배경 -->
+                    </div>
+                    <div class="text">
+                      <h3>2023 SHINee FANMEETING ‘Everyday is SHINee DAY’ : [Piece of SHINE]</h3>
+                      <p>2023.05.27 ~ 2023.05.28 잠실실내체육관</p>
+                    </div>
+                    <div class="rankNum">1위</div>
+                  </a>
+                </li>
+                <li class="rankLi">
+                  <a href="#">
+                    <div class="rankConImg">
+                      <!-- 블러 배경 -->
+                        <div class="rankConImg2"></div>
+                      <!-- 블러 배경 -->
+                      <!-- 선명한 배경 -->
+                      <img src="img/rank2.jpg" alt="rank2">
+                      <!-- 선명한 배경 -->
+                    </div>
+                    <div class="text">
+                      <h3>2023 NA KAMDEN FANMEETING [나캠든개론]</h3>
+                      <p>2023.06.09 ~ 2023.06.10 YES24 LIVE HALL</p>
+                    </div>
+                    <div class="rankNum">2위</div>
+                  </a>
+                </li>
+                <li class="rankLi">
+                  <a href="#">
+                    <div class="rankConImg">
+                      <!-- 블러 배경 -->
+                        <div class="rankConImg3"></div>
+                      <!-- 블러 배경 -->
+                      <!-- 선명한 배경 -->
+                      <img src="img/rank3.jpg" alt="rank3">
+                      <!-- 선명한 배경 -->
+                    </div>
+                    <div class="text">
+                      <h3>TAEYEON CONCERT - The ODD Of LOVE</h3>
+                      <p>2023.06.03 ~ 2023.06.04 KSPO DOME(올림픽체조경기장)</p>
+                    </div>
+                    <div class="rankNum">3위</div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            
           </div>
 
           <a href="#" class="more">랭킹 더보기</a>
