--- a/index.html
+++ b/index.html
@@ -17,7 +17,35 @@
   <div class="wrapper">
 
     <div class="popUp">
-      광고용 팝업
+      <ul>
+        <li>
+          <a href="#">
+            <img src="img/pop1.jpg" alt="pop1">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/pop2.jpg" alt="pop2">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/pop3.jpg" alt="pop3">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/pop4.jpg" alt="pop4">
+          </a>
+        </li>
+      </ul>
+      <div class="popClose">
+        <label for="popCheckBox">
+          <input type="checkbox" id="popCheckBox">오늘 그만보기
+        </label>
+        
+        <a href="" class="closebtn"></a>
+      </div>
     </div>
 
     <header>
@@ -224,7 +252,7 @@
                 <a href="#">
                   <img src="img/new3.jpg" alt="new3">
                   <div class="text">
-                    <h3>뮤지컬 〈오페라의 유령〉 - 서울</h3>
+                    <h3>뮤지컬 〈오페라의 유령〉</h3>
                     <p> 2023.05.18(목) 오후 2:00</p>
                   </div>
                 </a>
