리뷰창 댓글 구현

--- a/index.html
+++ b/index.html
@@ -612,8 +612,8 @@
         <div class="inner">
           <h2>Review</h2>
           <div class="reviewBoard">
-            <select name="reviewSelect" id="reviewSelect">
-              <option value="0">리뷰 남길 공연을 선택해주세요.</option>
+            <select name="reviewSelect" id="reviewSelect" >
+              <option value="" selected>리뷰 남길 공연을 선택해주세요.</option>
               <option value="1">DREAMSHOW</option>
               <option value="2">MAMMAMIA</option>
               <option value="3">BANILA CO</option>
@@ -627,26 +627,6 @@
             
             <div class="listBox">
               <ul class="listBoxUl">
-                <li class="newLi">
-                  <div class="proflie">
-                    <a href="" class="pro">프</a>
-                    <span class="nickName">JS25</span>
-                  </div>
-                  <div class="likeBtn">
-                    <button class="like">조아</button>
-                    <button class="hate">시러</button>
-                  </div>
-                  <div class="revTxt">
-                    <div class="conName">관람 공연: DREAMSHOW</div>
-                    <div class="conrev">
-                      텍스트<br>텍스트<br>텍스트<br>텍스트<br>
-                    </div>
-                  </div>
-                  <div class="etc">
-                    <span class="date">2023.02.03</span>
-                    <span class="">신고하기</span>
-                  </div>
-                </li>
               </ul>
             </div>
         
