리뷰창 수정, 로그인 페이지 구현

--- a/index.html
+++ b/index.html
@@ -615,10 +615,10 @@
             <select name="reviewSelect" id="reviewSelect" >
               <option value="" selected>리뷰 남길 공연을 선택해주세요.</option>
               <option value="1">DREAMSHOW</option>
-              <option value="2">MAMMAMIA</option>
-              <option value="3">BANILA CO</option>
-              <option value="4">Spicy</option>
-              <option value="5">7DREAM</option>
+              <option value="2">My First and Last</option>
+              <option value="3">영웅</option>
+              <option value="4">Dear Dream</option>
+              <option value="5">Candy</option>
             </select>
             <div class="inputBox">
               <input type="text" class="inputText" onkeydown="enter()">
