--- a/join.html
+++ b/join.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YES24 - 회원가입</title>
+    <title>YES24 티켓 - 회원가입</title>
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/join.css">
     <script defer src="js/join.js"></script>
+    
 </head>
 <body>
     <div class="wrapper">
@@ -15,28 +16,24 @@
             <h2>회원가입</h2>
             <div class="user">
                 <div class="joinId">
-                    <span>ID</span>
+                    <span>ID<mark class="errorJoinId"></mark></span>
                     <input type="text" class="joinIdInput" placeholder="사용하실 아이디를 입력해주세요(6~12글자)">
                 </div>
                 <div class="joinpw">
-                    <span>PASSWORD</span>
+                    <span>PASSWORD<mark class="errorJoinPw"></mark></span>
                     <input type="password" class="joinPwInput" placeholder="사용하실 비밀번호를 입력해주세요(8~12글자)">
                 </div>
                 <div class="joinpw2">
-                    <span>PASSWORD 확인</span>
+                    <span>PASSWORD 확인<mark class="errorJoinPw2"></mark></span>
                     <input type="password" class="joinPwInput2" placeholder="비밀번호 재입력">
                 </div>
                 <div class="name">
-                    <span>이름</span>
-                    <input type="text" class="userName" placeholder="이름을 입력해주세요">
-                </div>
-                <div class="userImage">
-                    <span>프로필 사진<small> (선택사항)</small></span>
-                    <input type="file" name="userImg" id="userImg">
+                    <span>이름 (닉네임)<mark class="errorJoinName"></mark></span>
+                    <input type="text" class="userName" placeholder="이름(닉네임)을 입력해주세요(2~5글자)">
                 </div>
             </div>
 
-            <button>회원가입</button>
+            <button class="joinBtn">회원가입</button>
             
         </div>
     </div>
