--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YES24 - 로그인</title>
+    <title>YES24 티켓 - 로그인</title>
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/login.css">
     <script defer src="js/login.js"></script>
@@ -25,9 +25,9 @@
                 </div>
             </div>
             <button class="loginBtn">LOGIN</button>
-    
+            
             <div class="join">
-                <a href="" class="sign">Or Sign Up Using</a>
+                <a href="join.html" class="sign">Or Sign Up Using</a>
                 <div class="sns">
                     <a href="" class="facebook"></a>
                     <a href="" class="google"></a>
