바닐라자바스크립트로 interview 슬라이드 만들기 하는 중

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   </div>
                   <div class="text">
                     <h3>MY AUNT MARY 단독공연 [Right Now]</h3>
-                    <p>2023.12.20 오후 2:00</p>
+                    <p>2023.12.20 오전 10:00</p>
                   </div>
                 </a>
               </li>
@@ -286,7 +286,7 @@
                   </div>
                   <div class="text">
                     <h3>뮤지컬 배우 정동화 20주년 단독 콘서트</h3>
-                    <p>2023.12.28 오후 6:00</p>
+                    <p>2023.12.28 오후 2:00</p>
                   </div>
                 </a>
               </li>
@@ -298,7 +298,7 @@
                   </div>
                   <div class="text">
                     <h3>뮤지컬 〈오페라의 유령〉</h3>
-                    <p> 2024.02.03 오후 2:00</p>
+                    <p> 2024.02.03 오후 5:00</p>
                   </div>
                 </a>
               </li>
@@ -310,7 +310,7 @@
                   </div>
                   <div class="text">
                     <h3>뮤지컬 〈보이A〉</h3>
-                    <p>2024.02.05 오후 3:00</p>
+                    <p>2024.02.05 오후 7:00</p>
                   </div>
                 </a>
               </li>
@@ -322,7 +322,7 @@
                   </div>
                   <div class="text">
                     <h3>제16회 부산항축제 - 도넛보트</h3>
-                    <p>2024.05.19 오후 2:00</p>
+                    <p>2024.05.25 오후 8:00</p>
                   </div>
                 </a>
               </li>
@@ -636,15 +636,20 @@
       <section class="interview">
         <h2>Interview</h2>
         <div class="inner">
-          <div class="interviewSlider">
-            <div class="interviewitem interviewitem1">
-                <img src="img/interview1.jpg" alt="interviewslideImg1">
-            </div>
-            <div class="interviewitem interviewitem2">
-              <img src="img/interview2.jpg" alt="interviewslideImg2">
-            </div>
-            <div class="interviewitem interviewitem3">
-              <img src="img/interview3.jpg" alt="interviewslideImg3">
+          <div class="prev">◀</div>
+          <div class="next">▶</div>
+
+          <div class="interviewSliderWrap">
+            <div class="interviewSlider">
+              <div class="interviewitem interviewitem1">
+                  <img src="img/interview1.jpg" alt="interviewslideImg1">
+              </div>
+              <div class="interviewitem interviewitem2">
+                <img src="img/interview2.jpg" alt="interviewslideImg2">
+              </div>
+              <div class="interviewitem interviewitem3">
+                <img src="img/interview3.jpg" alt="interviewslideImg3">
+              </div>
             </div>
           </div>
         </div>
