--- a/index.html
+++ b/index.html
@@ -153,8 +153,6 @@
       </div>
     </div>
 
-
-
     <main>
       <section class="mainSlider">
         <div class="s1Slider">
@@ -186,75 +184,84 @@
           <h2>What's Hot</h2>
           <div class="hotCon">
             <div class="best1">
-              <a href="#">
+              <div class="best1Bg">
+                <button class="goTicketing goTicketing1">예매하기</button>
+              </div>
+              <div>
                 <img src="img/hot1.jpg" alt="hot1">
                 <div class="best1Txt">
                   <h3>뮤지컬 수레바퀴 아래서</h3>
                   <p>2023.06.13 ~ 2023.08.20 대학로 드림아트센터 3관</p>
                 </div>
-              </a>
+              </div>
             </div>
             
             <ul>
               <li>
-                <a href="#">
+                <div>
                   <img src="img/hot2.jpg" alt="hot2">
                   <div class="bestTxt">
                     <h3>뮤지컬 인터뷰</h3>
                     <p>2023.03.04 ~ 2023.05.28<br>
                       예스24스테이지 2관</p>
+                    <button class="goTicketing goTicketing2">예매하기</button>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div>
                   <img src="img/hot3.jpg" alt="hot3">
                   <div class="bestTxt">
                     <h3>뮤지컬 행복한 왕자</h3>
                     <p>2023.04.29 ~ 2023.06.18<br>
                       충무아트센터 중극장 블랙</p>
+                    <button class="goTicketing goTicketing3">예매하기</button>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div>
                   <img src="img/hot4.jpg" alt="hot4">
                   <div class="bestTxt">
                     <h3>뮤지컬 브라더스 까라마조프</h3>
                     <p>2023.03.25 ~ 2023.06.18<br>
                       예스24스테이지 1관</p>
+                    <button class="goTicketing goTicketing4">예매하기</button>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div>
                   <img src="img/hot5.jpg" alt="hot5">
                   <div class="bestTxt">
                     <h3>뮤지컬 신의 손가락</h3>
                     <p>2023.06.25 ~ 2023.08.20<br>
                       대학로 드림아트센터 2관</p>
+                    <button class="goTicketing goTicketing5">예매하기</button>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div>
                   <img src="img/hot6.jpg" alt="hot6">
                   <div class="bestTxt">
                     <h3>뮤지컬 오리지널팀 데한</h3>
                     <p>2023.05.05 ~ 2023.05.21<br>
                       경희대학교 평화의 전당</p>
+                    <button class="goTicketing goTicketing6">예매하기</button>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div>
                   <img src="img/hot7.jpg" alt="hot7">
                   <div class="bestTxt">
                     <h3>뮤지컬 드림하이</h3>
                     <p>2023.05.13 ~ 2023.07.23<br>
                       광림아트센터 BBCH홀</p>
+                    <button class="goTicketing goTicketing7">예매하기</button>
                   </div>
-                </a>
+                </div>
               </li>
             </ul>
           </div>
@@ -368,10 +375,8 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg1"></div>
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_musical1.jpg" alt="rank_musical1">
+                      <!-- 블러 배경 --><div class="rankConImg1"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_musical1.jpg" alt="rank_musical1">
                     </div>
                     <div class="text">
                       <h3>뮤지컬 〈나르치스와 골드문트〉</h3>
@@ -383,10 +388,8 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg2"></div>
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_musical2.jpg" alt="rank_musical2">
+                      <!-- 블러 배경 --><div class="rankConImg2"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_musical2.jpg" alt="rank_musical2">
                     </div>
                     <div class="text">
                       <h3>뮤지컬 〈맘마미아!〉 - 인천</h3>
@@ -398,10 +401,8 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg3"></div>
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_musical3.jpg" alt="rank_musical3">
+                      <!-- 블러 배경 --><div class="rankConImg3"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_musical3.jpg" alt="rank_musical3">
                     </div>
                     <div class="text">
                       <h3>뮤지컬 〈쿠로이 저택엔 누가 살고 있을까?〉</h3>
@@ -470,10 +471,8 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg1"></div>
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_theater1.jpg" alt="rank_theater1">
+                      <!-- 블러 배경 --><div class="rankConImg1"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_theater1.jpg" alt="rank_theater1">
                     </div>
                     <div class="text">
                       <h3>연극 〈포쉬〉</h3>
@@ -485,10 +484,8 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg2"></div>
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_theater2.jpg" alt="rank_theater2">
+                      <!-- 블러 배경 --><div class="rankConImg2"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_theater2.jpg" alt="rank_theater2">
                     </div>
                     <div class="text">
                       <h3>연극 〈시티즌 오브 헬〉</h3>
@@ -500,12 +497,8 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg3"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_theater3.jpg" alt="rank_theater3">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg3"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_theater3.jpg" alt="rank_theater3">
                     </div>
                     <div class="text">
                       <h3>연극 [행오버]</h3>
@@ -636,19 +629,28 @@
       <section class="interview">
         <h2>Interview</h2>
         <div class="inner">
-          <div class="prev">◀</div>
-          <div class="next">▶</div>
+          <div class="prev"><i class="fa-solid fa-chevron-left" style="color: #cccccc;"></i></div>
+          <div class="next"><i class="fa-solid fa-chevron-right" style="color: #cccccc;"></i></div>
 
           <div class="interviewSliderWrap">
             <div class="interviewSlider">
               <div class="interviewitem interviewitem1">
-                  <img src="img/interview1.jpg" alt="interviewslideImg1">
+                  <img src="img/interview1.png" alt="interviewslideImg1">
               </div>
               <div class="interviewitem interviewitem2">
-                <img src="img/interview2.jpg" alt="interviewslideImg2">
+                <img src="img/interview2.png" alt="interviewslideImg2">
               </div>
               <div class="interviewitem interviewitem3">
-                <img src="img/interview3.jpg" alt="interviewslideImg3">
+                <img src="img/interview3.png" alt="interviewslideImg3">
+              </div>
+              <div class="interviewitem interviewitem4">
+                  <img src="img/interview4.JPG" alt="interviewslideImg4">
+              </div>
+              <div class="interviewitem interviewitem5">
+                <img src="img/interview5.jpg" alt="interviewslideImg5">
+              </div>
+              <div class="interviewitem interviewitem6">
+                <img src="img/interview6.png" alt="interviewslideImg6">
               </div>
             </div>
           </div>
@@ -786,7 +788,6 @@
         </div>
       </section>
     </main>
-
 
     <footer>
       <div class="inner">
