--- a/ticketing.html
+++ b/ticketing.html
@@ -14,7 +14,11 @@
     <div class="ticketingWrap">
         <div class="wrap">
             <div class="screen">SCREEN</div>
-            <div class="rever"></div>
+            <div class="seatBox">
+                <div class="seatNum"></div>
+                <div class="seat"></div>
+            </div>
+            
         </div>
 
         <div class="showTicket">
