header, hot 반응형 작업

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
     <header id="header">
       
       <div class="innerHeader">
+        <div class="hideLogo">
+          <h1 class="logo">
+            <a href="index.html"></a>
+          </h1>
+        </div>
         <div class="leftHeader">
           <div class="navBar">
             <span></span>
@@ -96,13 +101,13 @@
 
     <div class="openLeft">
       <div class="innerLeft">
-        <header>
+        <head>
           <div class="navBar">
             <span></span>
             <span></span>
             <span></span>
           </div>
-        </header>
+        </head>
         
 
         <ul class="leftNav">
@@ -189,6 +194,8 @@
               <div class="best1Txt">
                 <h3>뮤지컬 수레바퀴 아래서</h3>
                 <p>2023.06.13 ~ 2023.08.20 대학로 드림아트센터 3관</p>
+                <button class="goTicketing goTicketing1">예매하기</button>
+
               </div>
 
             </div>
