--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             <h2>LogIn</h2>
             <div class="idPw">
                 <div class="id">
-                    <span>USERNAME<mark class="errorId"><mark></span>
+                    <span>USERID<mark class="errorId"><mark></span>
                     <input type="text" class="idInput" placeholder="Type your user name">
                 </div>
                 <div class="pass">
