ad 부분까지 반응형 완료, new dday 오류 수정

--- a/index.html
+++ b/index.html
@@ -337,6 +337,20 @@
                   </div>
                 </a>
               </li>
+
+
+              <li>
+                <a href="#">
+                  <div class="newImg">
+                    <img src="img/new1.jpg" alt="new6">
+                    <div class="dDay dDa61"></div>
+                  </div>
+                  <div class="text">
+                    <h3>MY AUNT MARY 단독공연 [Right Now]</h3>
+                    <p>2023.12.20 오전 10:00</p>
+                  </div>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
